# ssh_file_transfer

./: .env_template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ssh_file_transfer/: main.py
terraform/: data.tf  network.tf  outputs.tf  providers.tf  server.tf  ssh.tf  storage.tf  variables.tf
